--- a/frontend_react/public/theme_fansgames/css/reels.css
+++ b/frontend_react/public/theme_fansgames/css/reels.css
@@ -1073,19 +1073,21 @@ img {
     transform: scale(1.1);
 }
 .swiper-container {
-    width: 100%;
-    max-width: 940px;
-    height: 80vh;
-    margin: 0 20px;
-    overflow: hidden;
-    border-radius: 10px;
-    width: 350px;
+    /*! width: 100%; */
+    /*! max-width: 940px; */
+    /* height: 80vh; */
+    /*! margin: 0 20px; */
+    /*! overflow: hidden; */
+    /*! border-radius: 10px; */
+    /*! width: 350px; */
+    margin-top: ;
 }
 .swiper-slide {
-    position: relative;
+    /*! position: relative; */
     display: flex;
     justify-content: center;
-    padding: 0px;
+    /*! padding: 0px; */
+    align-items: center;
 }
 .swiper-slide.active {
     /* position: fixed; */
@@ -1235,12 +1237,12 @@ img {
     filter: drop-shadow(2px 4px 6px #adadad);
 }
 .v_container{
-    height: 600px;
+    /* height: 600px; */
     /* background: rebeccapurple; */
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
-    width: 420px;
+    align-items: center; */
+    /*! width: 420px; */
 }
 .page_links h6{
     font-size: 16px;
@@ -1368,8 +1370,9 @@ border-radius: 5px;
     object-fit: cover;
 }
 .right_index{
-    margin-top: 20px;
-    padding-top: 22px;
+    margin-top: 60px;
+    padding: 0px 30px;
+    padding-top: 40px;
 }
 .regi_btn{    
     width: 100%;        
@@ -1428,4 +1431,9 @@ border-radius: 5px;
 }
 #log_modal .btn-close{
     
+}
+.left_index{
+  margin-top: 60px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
